# Generative-AI

Agent-skill/: README.md  SKILL.md  research_methodology.md
Agent-skill/scripts/: get_youtube_transcript.py
FineTuning LLM/: 01_Why_finetuning_lab_student.ipynb  02_Where_finetuning_fits_in_lab_student.ipynb  03_Instruction_tuning_lab_student.ipynb  04_Data_preparation_lab_student.ipynb  05_Training_lab_student.ipynb  06_Evaluation_lab_student.ipynb
LLMOps/LLM_Tracking_mlflow/: .env.example  .gitignore  1.MLFlow-basic_example.py  README.md  pyproject.toml
LLM_Evaluation/: 1.LLM_Evaluation_Langsmith.ipynb  2.RAG_Evaluation.ipynb  README.md  pyproject.toml
LangGraph-usercase/: 1.SimpleGraphs.ipynb  2.Chatbot-sequence.py  3.Chatbot-conditional.py  4.1Looping.ipynb  4.ToolCall.ipynb  5.MemoryTOagent.ipynb  6.Langsmit.ipynb  7.HumaninLoop.py  8.React-agent.py  9.RAG-agent.py  README.md  multiagent.py  pyproject.toml  test_multiagent.py
LangGraph-usercase/LangGraph-AdvanceUsecase/: 1.ReAct agent.ipynb  2. Using Search Tools in Loop.ipynb  3.PersistenceMemory&Streaming.ipynb  4.HLIP&Updating the Agent States.ipynb  5.EssayWriter.ipynb
LangGraph-usercase/data/: chroma.sqlite3
