[project]
name = "llm-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ibm>=1.0.4",
    "langsmith>=0.7.14",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.2.3",
    "tiktoken>=0.12.0",
]
